--- a/apps/dashboard/src/app/home/home.component.html
+++ b/apps/dashboard/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home-container">
+  <ng-container *ngFor="let cell of allCells$ | async">
+    <bba-cell class="cell-wrapper" [cell]="cell"></bba-cell>
+  </ng-container>
+</div>
