--- a/apps/ledger/src/app/cells/cell-details/cell-details.component.html
+++ b/apps/ledger/src/app/cells/cell-details/cell-details.component.html
@@ -39,10 +39,19 @@
       <mat-form-field class="full-width">
         <input
           matInput
-          placeholder="Route Path"
-          formControlName="routePath"
+          placeholder="Component Name"
+          formControlName="componentName"
           type="text"
-          name="routePath"
+          name="componentName"
+        />
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <input
+          matInput
+          placeholder="Remote Name"
+          formControlName="remoteName"
+          type="text"
+          name="remoteName"
         />
       </mat-form-field>
       <mat-form-field class="full-width">
@@ -70,7 +79,11 @@
       >
         Save
       </button>
-      <button type="button" mat-button (click)="form.reset(); cancelled.emit()">
+      <button
+        type="button"
+        mat-button
+        (click)="form.resetForm(); cancelled.emit()"
+      >
         Cancel
       </button>
     </mat-card-actions>
