--- a/apps/primary/src/app/primary/primary.component.html
+++ b/apps/primary/src/app/primary/primary.component.html
@@ -5,4 +5,38 @@
     Module Federation, angular is shared so the download is minimal for the
     frontend
   </p>
+  <mat-card-title>
+    <span>
+      TEST
+    </span>
+  </mat-card-title>
+  <form>
+    <mat-card-content>
+      <mat-form-field class="full-width">
+        <input
+          matInput
+          placeholder="Enter a title"
+          type="input"
+          name="title"
+          required="true"
+        />
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <input
+          matInput
+          placeholder="Enter a type"
+          type="input"
+          name="type"
+          required="true"
+        />
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" mat-button color="primary">Save</button>
+      <button type="button" mat-button>
+        Cancel
+      </button>
+    </mat-card-actions>
+  </form>
 </div>
