--- a/apps/dashboard/src/app/home/cell/cell.component.html
+++ b/apps/dashboard/src/app/home/cell/cell.component.html
@@ -1,3 +1,4 @@
 <mat-card class="cell-wrapper">
   <ng-container #placeHolder></ng-container>
+  <span class="version-number">v{{ cell.version }}</span>
 </mat-card>
