--- a/apps/secondary/src/app/secondary/secondary.component.html
+++ b/apps/secondary/src/app/secondary/secondary.component.html
@@ -5,4 +5,5 @@
     Module Federation, angular is shared so the download is minimal for the
     frontend
   </p>
+  <ng-container #placeHolder></ng-container>
 </div>
