update: tweaks for the demo

--- a/apps/primary/src/app/primary/primary.component.html
+++ b/apps/primary/src/app/primary/primary.component.html
@@ -1,17 +1,17 @@
 <div class="container">
-  <h2>Primary (Microfrontend)</h2>
-  <p>
-    This profile component is being remotely loaded into the application using
-    Module Federation, angular is shared so the download is minimal for the
-    frontend
-  </p>
   <mat-card-title>
     <span>
-      TEST
+      Primary (Microfrontend)
     </span>
   </mat-card-title>
   <form>
     <mat-card-content>
+      <p>
+        This primary component is being remotely loaded into the application using
+        Module Federation. Angular is shared so the download is minimal for the
+        frontend.
+      </p>
+
       <mat-form-field class="full-width">
         <input
           matInput
