--- a/apps/ledger/src/app/app.component.html
+++ b/apps/ledger/src/app/app.component.html
@@ -2,7 +2,7 @@
 </bba-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav #sidenav [opened]="true" mode="side" class="app-sidenav">
+  <mat-sidenav #sidenav [opened]="false" mode="side" class="app-sidenav">
     <ng-container>
       <span class="logo">
         <a [routerLink]="'/'">
