--- a/apps/primary/src/app/app.component.html
+++ b/apps/primary/src/app/app.component.html
@@ -2,7 +2,7 @@
 </bba-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav #sidenav [opened]="true" mode="side" class="app-sidenav">
+  <mat-sidenav #sidenav [opened]="false" mode="side" class="app-sidenav">
     <ng-container> </ng-container>
   </mat-sidenav>
 
