--- a/apps/secondary/src/app/secondary/secondary.component.html
+++ b/apps/secondary/src/app/secondary/secondary.component.html
@@ -1,9 +1,8 @@
 <div class="container">
   <h2>Secondary (Microfrontend)</h2>
   <p>
-    This primary component is being remotely loaded into the application using
+    This secondary component is being remotely loaded into the application using
     Module Federation. Angular is shared so the download is minimal for the
     frontend.
   </p>
-  <ng-container #placeHolder></ng-container>
 </div>
