--- a/libs/module-outlet/src/lib/module-outlet/module-outlet.component.html
+++ b/libs/module-outlet/src/lib/module-outlet/module-outlet.component.html
@@ -1,4 +1,4 @@
 <mat-card class="cell-wrapper">
   <ng-container #placeHolder></ng-container>
-  <span class="version-number">v{{ cell.version }}</span>
+  <span class="version-number">v{{ cell?.version }}</span>
 </mat-card>
